// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockchain: Ethereum authenticate: correctly signs auth message 1`] = `"0xcf54e7560501fa53e3f7092672a920c346034ba93d001919f0cb5445851b5685"`;

exports[`Blockchain: Ethereum createLink: should create erc1271 proof correctly 1`] = `
Object {
  "account": "0xbe6c27620b271dd76f1787cdef1f4375cff3fa1f@eip155:1337",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "0x9feb4c429a673415edb63f42b5a302b669b2e479e3b44d4ac41ec7f09d53d6494063bf53dddaed16c1d229ca4cb0841b2360d52777289c57ba539c1ddff9144f1b",
  "type": "erc1271",
  "version": 2,
}
`;

exports[`Blockchain: Ethereum createLink: should create ethereumEOA proof correctly 1`] = `
Object {
  "account": "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "0x9feb4c429a673415edb63f42b5a302b669b2e479e3b44d4ac41ec7f09d53d6494063bf53dddaed16c1d229ca4cb0841b2360d52777289c57ba539c1ddff9144f1b",
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`Blockchain: Ethereum createLink: should throw if erc1271 is on wrong chain 1`] = `[Error: ChainId in provider (1337) is different from AccountID (123)]`;

exports[`Blockchain: Ethereum validateLink: validate v0 and v1 proofs 1`] = `
Object {
  "account": "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1",
  "message": "Create a new 3Box profile

- 
Your unique profile ID is did:3:bafysdfwefwe",
  "signature": "0xfa69ccf4a94db61325429d37c58c6de534b73f439700fbb748209890a5780f3365a5335f82d424d7f9a63ee41b637c116e64ef2f32c761bb065e4409f978c4bb1c",
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`Blockchain: Ethereum validateLink: validate v0 and v1 proofs 2`] = `[Error: invalid point]`;

exports[`Blockchain: Ethereum validateLink: validate v0 and v1 proofs 3`] = `
Object {
  "account": "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1",
  "message": "Create a new 3Box profile

- 
Your unique profile ID is did:3:bafysdfwefwe",
  "signature": "0xfa69ccf4a94db61325429d37c58c6de534b73f439700fbb748209890a5780f3365a5335f82d424d7f9a63ee41b637c116e64ef2f32c761bb065e4409f978c4bb1c",
  "type": "ethereum-eoa",
  "version": 2,
}
`;
